internal/lang/testdata/conformance/accept/minimal_page.gwdk
// Minimal static page: package, route, and a view.
package pages

route "/"

view {
  <main>
    <h1>Hello</h1>
  </main>
}
