internal/lang/testdata/conformance/reject/malformed_use.gwdk
// expect: malformed_gowdk_use
package pages

use widgets

route "/"

view {
  <main></main>
}
